<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_detail_bg_color"
    tools:context=".activity.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fav_float_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="40dp"
            app:layout_constraintStart_toEndOf="@id/img_main_poster"
            app:layout_constraintBottom_toBottomOf="@id/img_main_poster"
            app:layout_constraintEnd_toEndOf="parent"
            android:clickable="true"
            android:src="@drawable/ic_baseline_favorite_border_24"
            android:contentDescription="favorite button"
            android:focusable="true"
            />
        <ImageView
            android:id="@+id/img_bg_poster"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars"
            android:foreground="#60000000"
            android:contentDescription="@string/desc_bg_poster"
            tools:targetApi="m" />

        <ImageView
            android:id="@+id/img_main_poster"
            android:layout_width="210dp"
            android:layout_height="315dp"
            android:layout_marginTop="120dp"
            android:layout_marginStart="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/black"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/desc_main_poster"
            />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            app:layout_constraintStart_toStartOf="@id/img_main_poster"
            app:layout_constraintEnd_toEndOf="@id/img_main_poster"
            app:layout_constraintTop_toBottomOf="@id/img_main_poster"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/desc_title"
            />

            <TextView
                android:id="@+id/tv_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="@id/fav_float_button"
                app:layout_constraintEnd_toEndOf="@id/fav_float_button"
                app:layout_constraintTop_toBottomOf="@id/fav_float_button"
                app:drawableStartCompat="@drawable/ic_baseline_star_24"

                android:textSize="20sp"
                android:text="@string/desc_rating"
                android:textColor="@color/white"
                android:textStyle="bold" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/consLayout1"
            android:layout_marginTop="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title">

            <TextView
                android:id="@+id/headline_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:text="@string/desc_details" />

            <View
                android:id="@+id/line1"
                android:layout_width="100dp"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#a17f4f"
                app:layout_constraintTop_toBottomOf="@id/headline_details"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/detail_lines"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/line1"
                app:layout_constraintStart_toStartOf="parent" >

                <TextView
                    android:id="@+id/detail_genre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:drawableStartCompat="@drawable/ic_baseline_circle_24"
                    android:textSize="15sp"
                    android:textColor="@color/white"
                    android:text="@string/genre_text"/>

                <TextView
                    android:id="@+id/detail_release"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:drawableStartCompat="@drawable/ic_baseline_circle_24"
                    android:textSize="15sp"
                    android:textColor="@color/white"
                    android:text="@string/release_text"/>

                <TextView
                    android:id="@+id/detail_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:drawableStartCompat="@drawable/ic_baseline_circle_24"
                    android:textSize="15sp"
                    android:textColor="@color/white"
                    android:text="@string/language_text"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/detail_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="vertical"
                app:layout_constraintStart_toEndOf="@id/detail_lines"
                app:layout_constraintTop_toTopOf="@id/detail_lines">

                <TextView
                    android:id="@+id/tv_genre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="@color/white"
                    android:text="@string/genre_desc"/>

                <TextView
                    android:id="@+id/tv_release"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textSize="15sp"
                    android:textColor="@color/white"
                    android:text="@string/release_desc"/>

                <TextView
                    android:id="@+id/tv_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textSize="15sp"
                    android:textColor="@color/white"
                    android:text="@string/language_desc"/>


            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/consLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            app:layout_constraintTop_toBottomOf="@id/consLayout1" >

            <TextView
                android:id="@+id/headline_synopsis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:text="@string/synopsis_text" />

            <View
                android:id="@+id/line2"
                android:layout_width="100dp"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#a17f4f"
                app:layout_constraintTop_toBottomOf="@id/headline_synopsis"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tv_synopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/line2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:justificationMode="inter_word"
                android:textAlignment="gravity"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:text="@string/synopsis_desc"/>

            <View
                android:id="@+id/line3"
                android:layout_width="100dp"
                android:layout_height="1dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:background="@color/maroon"
                app:layout_constraintTop_toBottomOf="@id/tv_synopsis"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>